--- a/.env
+++ b/.env
@@ -19,7 +19,17 @@ APP_SECRET=b28dcff16391c27bee298702202b27f2
 ###< symfony/framework-bundle ###
 
 ###> app ###
-APP_TORRENT_AUTH_URL=https://rutracker.org/forum/login.php
-APP_TORRENT_LOGIN=login
-APP_TORRENT_PASSWORD=pass
+APP_PROXY_IP=xxx
+APP_PROXY_PORT_HTTP=xxx
+APP_PROXY_AUTH=xxx
+APP_TORRENT_LOGIN_URL=xxx
+APP_TORRENT_SEARCH_URL=xxx
+APP_TORRENT_FORUM_URL=xxx
+APP_TORRENT_LOGIN=xxx
+APP_TORRENT_PASSWORD=xxx
+APP_TRANSMISSION_HOST=xxx
+APP_TRANSMISSION_PORT=xxx
+APP_TRANSMISSION_LOGIN=xxx
+APP_TRANSMISSION_PASSWORD=xxx
+APP_RUCAPTCHA_TOKEN=xxx
 ###< app ###
