--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,13 @@
         "symfony/css-selector": "5.4.*",
         "symfony/dom-crawler": "5.4.*",
         "symfony/dotenv": "5.4.*",
-        "symfony/flex": "^1.17|^2",
+        "symfony/flex": "^1.18",
         "symfony/framework-bundle": "5.4.*",
         "symfony/http-client": "5.4.*",
         "symfony/maker-bundle": "^1.36",
+        "symfony/monolog-bundle": "^3.7",
         "symfony/runtime": "5.4.*",
+        "symfony/translation": "5.4.*",
         "symfony/yaml": "5.4.*",
         "transmission-php/transmission-php": "^2.2"
     },
