--- a/.env
+++ b/.env
@@ -27,9 +27,11 @@ APP_TORRENT_SEARCH_URL=xxx
 APP_TORRENT_FORUM_URL=xxx
 APP_TORRENT_LOGIN=xxx
 APP_TORRENT_PASSWORD=xxx
+APP_BB_COOKIES=xxx
 APP_TRANSMISSION_HOST=xxx
 APP_TRANSMISSION_PORT=xxx
 APP_TRANSMISSION_LOGIN=xxx
 APP_TRANSMISSION_PASSWORD=xxx
 APP_RUCAPTCHA_TOKEN=xxx
+APP_TELEGRAM_TOKEN=xxx
 ###< app ###
