--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,6 +12,7 @@ parameters:
     app_torrent_url_forum: '%env(APP_TORRENT_FORUM_URL)%'
     app_torrent_login: '%env(APP_TORRENT_LOGIN)%'
     app_torrent_pass: '%env(APP_TORRENT_PASSWORD)%'
+    app_bb_cookies: '%env(APP_BB_COOKIES)%'
 
 services:
     # default configuration for services in *this* file
@@ -56,4 +57,5 @@ services:
             $searchUrl: '%app_torrent_url_search%'
             $forumUrl: '%app_torrent_url_forum%'
             $proxy: 'http://%app_proxy_auth%@%app_proxy_ip%:%app_proxy_port%'
+            $bb_cookies: '%app_bb_cookies%'
             $transmission: '@App\Service\Torrent\TransmissionClient'
