--- a/.env
+++ b/.env
@@ -34,4 +34,5 @@ APP_TRANSMISSION_LOGIN=xxx
 APP_TRANSMISSION_PASSWORD=xxx
 APP_RUCAPTCHA_TOKEN=xxx
 APP_TELEGRAM_TOKEN=xxx
+APP_TELEGRAM_DEFAULT_CHAT=xxx
 ###< app ###
